@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Fixed a bug in `disagg_sources` for mutex sources: src_mutex
+    was not passed
   * Internal: forced the colon convention on mutex sources
   * Fixed a bug in the disaggregation with mutex sources incorrectly
     averaging over the rates and not the poes
